argocd-managed/gim-tracker/templates/deployments.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: group-ironmen-tracker-frontend
spec:
  selector:
    matchLabels:
      app: gim-tracker-frontend
  replicas: 1
  revisionHistoryLimit: 0
  template:
    metadata:
      labels:
        app: gim-tracker-frontend
    spec:
      containers:
        - name: group-ironmen-tracker-frontend
          image: docker.io/chrisleeeee/group-ironmen-tracker-frontend:latest
          ports:
            - containerPort: 4000
          # resources:
          #   requests:
          #     memory: "64Mi"
          #     cpu: "20m"
          #   limits:
          #     memory: "64Mi"
          #     cpu: "20m"
          livenessProbe:
            httpGet:
              path: /
              port: 4000
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: group-ironmen-tracker-backend
spec:
  selector:
    matchLabels:
      app: gim-tracker-backend
  replicas: 1
  revisionHistoryLimit: 0
  template:
    metadata:
      labels:
        app: gim-tracker-backend
    spec:
      containers:
        - name: group-ironmen-tracker-backend
          image: docker.io/chrisleeeee/group-ironmen-tracker-backend:latest
          ports:
            - containerPort: 8080
          # resources:
          #   requests:
          #     memory: "64Mi"
          #     cpu: "20m"
          #   limits:
          #     memory: "64Mi"
          #     cpu: "20m"
          livenessProbe:
            httpGet:
              path: /api/ge-prices
              port: 8080
